{
    "name": "GameInput",
    "maps": [
        {
            "name": "GamePlay",
            "id": "f8addc51-42a4-4fdd-ac1c-3efa86e691ba",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "ba5949d6-3666-4c68-bf36-00e8eee1ee2c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PauseMenuActivation",
                    "type": "Button",
                    "id": "c3ca5cea-f47d-4a40-9928-044cca3f0f2b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AnyKeyPress",
                    "type": "Button",
                    "id": "7d8c3ec5-546c-4085-818b-f310085acdd7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "69168be8-b49d-4505-8e4d-a94d7c391d6d",
                    "path": "2DVector",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "left",
                    "id": "944d2de1-5bba-4d55-866b-3ea1e65def66",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "d3ced35d-0c05-48af-8aa9-61978b035145",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "d2e1d76d-8065-46f7-b2c5-25fa7597b389",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "bd46c926-06f7-4516-a155-6d312e3a06af",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "24f6bf21-864e-4581-af45-01cea5f54721",
                    "path": "<Keyboard>/escape",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "PauseMenuActivation",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "becad620-7604-42d4-a908-dd253292b499",
                    "path": "<Keyboard>/anyKey",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "AnyKeyPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1e157b93-f806-4915-8912-109ffbb53d42",
                    "path": "<Mouse>/press",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "AnyKeyPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}